# tetrahedron_pair_generator

./: CMakeLists.txt  README.md  main.cpp
config/: config.json
headers/: BaseWriter.h  CSVWriter.h  Config.h  GeometryUtils.h  JSONWriter.h  OBJWriter.h  TetrahedronFactory.h  Types.h  Utils.h
output/: tetrahedron_pair_100_dataset.csv  tetrahedron_pair_10k_dataset.csv
output/archive/: tetrahedron_pair_10k_dataset.csv
src/: BaseWriter.cpp  CSVWriter.cpp  Config.cpp  GeometryUtils.cpp  JSONWriter.cpp  OBJWriter.cpp  TetrahedronFactory.cpp
